...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="HoF-DW-Bbb" id="vtY-t4-hE3"/>
                            <outlet property="delegate" destination="HoF-DW-Bbb" id="eHb-ET-4yq"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Notices" id="57U-sf-YXj">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="QQY-Tb-Vrh">
                            <connections>
                                <segue destination="Wep-4n-0XU" kind="show" id="wbj-3s-J8c"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add Notice" id="Xg6-cR-QdU">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="SIx-g9-WkK">
                            <connections>
                                <action selector="cancelPressed" destination="44C-QJ-Tun" id="vNZ-fR-Fwd"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="zVq-vi-uAe">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="DsM-6b-UN7" id="1U6-Kx-mFB"/>
                            <outlet property="delegate" destination="DsM-6b-UN7" id="8jJ-1A-PFB"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Chores List" id="Oa3-Qq-AmO">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="cHu-7B-VqE">
                            <connections>
                                <segue destination="rHH-Dc-adE" kind="show" id="NP4-M0-Vv4"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Chore" id="mds-YI-Ac1">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="P7t-ig-6W9">
                            <connections>
                                <action selector="cancelAdd" destination="dkc-HQ-Ju8" id="ZhD-Ar-4fQ"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="vCJ-EN-8uc">
...
                                    <navigationItem title="Bill Payment &amp; Details" id="ufx-He-Fkl">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="v2v-TI-qsB">
                                            <connections>
                                                <action selector="dimissBill" destination="crl-Rt-zYw" id="EwC-0Z-DOl"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Save" id="I32-rS-vPP">
                                            <connections>
                                                <action selector="saveBill" destination="crl-Rt-zYw" id="dAi-u8-Dv4"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
            <point key="canvasLocation" x="6124" y="-344.07796101949026"/>
        </scene>
        <!--Chores-->
        <scene sceneID="0NF-Mn-jQp">
            <objects>
                <navigationController id="5Fp-fI-53k" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Chores" image="chores" id="yc6-zK-n9W"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="i96-gO-vft">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="DsM-6b-UN7" kind="relationship" relationship="rootViewController" id="pKq-Wn-6uW"/>
...
